[gd_scene load_steps=13 format=3 uid="uid://cindett4r433f"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_sdlfd"]
[ext_resource type="Texture2D" uid="uid://cl4ef8hyeqx1l" path="res://Assets/Sprites/Custom/Background.png" id="2_furc8"]
[ext_resource type="TileSet" uid="uid://cd3qvsgfx5pmr" path="res://Scenes/world0_tileset.tres" id="3_ar8on"]
[ext_resource type="PackedScene" uid="uid://b10u4gvqy8rcj" path="res://Scenes/Player_0.tscn" id="4_2auae"]
[ext_resource type="PackedScene" uid="uid://b0x1hf0cxved5" path="res://Scenes/Enemy.tscn" id="5_dvb77"]
[ext_resource type="PackedScene" uid="uid://dlhy1ldll77c" path="res://Scenes/Door.tscn" id="6_k2ayu"]
[ext_resource type="Animation" uid="uid://wn8pijvgb2on" path="res://Scenes/zoom_in_player.res" id="7_g3h2r"]
[ext_resource type="Animation" uid="uid://dteq76qrgir20" path="res://Scenes/zoom_out_player.res" id="8_8kyf6"]
[ext_resource type="PackedScene" uid="uid://bmr1wuaorpuic" path="res://Scenes/GUI.tscn" id="9_y8c8s"]
[ext_resource type="PackedScene" uid="uid://dwmtfm8xlvnw2" path="res://Scenes/Terminal.tscn" id="10_rr7bi"]

[sub_resource type="Animation" id="Animation_sdbmr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:zoom:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b7y41"]
_data = {
"RESET": SubResource("Animation_sdbmr"),
"zoom_in_player": ExtResource("7_g3h2r"),
"zoom_out_player": ExtResource("8_8kyf6")
}

[node name="level_test" type="Node2D"]
script = ExtResource("1_sdlfd")
player_default_position = Vector2(-594, 310)

[node name="BG" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.44, 0.44, 0.44, 1)
position = Vector2(-50, 26)
scale = Vector2(6.38889, 7.15556)
texture = ExtResource("2_furc8")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(4, 5)
tile_set = ExtResource("3_ar8on")
rendering_quadrant_size = 18
format = 2
layer_0/name = "FarBG"
layer_0/modulate = Color(0.61, 0.61, 0.61, 1)
layer_0/z_index = -3
layer_1/name = "CloseBG"
layer_1/tile_data = PackedInt32Array(-393221, 196608, 3, -327685, 196608, 3, -262149, 196608, 3, -393220, 196608, 3, -327684, 196608, 3, -393219, 196608, 3, -327683, 196608, 3, -262147, 196608, 3, -393218, 196608, 3, -327682, 196608, 3, -262146, 196608, 3, -393217, 196608, 3, -327681, 196608, 3, -262145, 196608, 3, -458752, 196608, 3, -393216, 196608, 3, -327680, 196608, 3, -458751, 196608, 3, -393215, 196608, 3, -327679, 196608, 3, -458750, 196608, 3, -393214, 196608, 3, -327678, 196608, 3, -458749, 196608, 3, -393213, 196608, 3, -327677, 196608, 3, -458748, 196608, 3, -393212, 196608, 3, -327676, 196608, 3, -458747, 196608, 3, -393211, 196608, 3, -327675, 196608, 3, -458746, 196608, 3, -393210, 196608, 3, -327674, 196608, 3, -458745, 196608, 3, -393209, 196608, 3, -327673, 196608, 3, 720897, 196608, 3, 786433, 196608, 3, 720898, 196608, 3, 786434, 196608, 3, 720899, 196608, 3, 786435, 196608, 3, 720900, 196608, 3, 786436, 196608, 3, 720901, 196608, 3, 786437, 196608, 3, 720902, 196608, 3, 786438, 196608, 3, 720903, 196608, 3, 786439, 196608, 3, 720904, 196608, 3, 786440, 196608, 3, 720905, 196608, 3, 786441, 196608, 3, 720906, 196608, 3, 786442, 196608, 3, 720907, 196608, 3, 786443, 196608, 3, 720908, 196608, 3, 786444, 196608, 3, -262148, 196608, 3)
layer_2/name = "FloorsWalls"
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(1245154, 0, 1, 1245155, 0, 1, 1245156, 0, 1, 1245157, 0, 1, 1245158, 0, 1, 1245159, 0, 1, 1245160, 0, 1, 1245161, 0, 1, 1245162, 0, 1, 1245163, 0, 1, 1245164, 0, 1, 1245165, 0, 1, 1245166, 0, 1, 1245167, 0, 1, 1245168, 0, 1, 1245169, 0, 1, 1245170, 0, 1, 1245171, 0, 1, 1245172, 0, 1, 1245173, 0, 1, 1245174, 0, 1, 1245175, 0, 1, 1245176, 0, 1, 1245177, 0, 1, 1245178, 0, 1, 1245179, 0, 1, 1245180, 0, 1, 1245181, 0, 1, 1245182, 0, 1, 1245153, 131072, 1, 1245152, 131072, 1, 1245151, 131072, 1, 1245150, 131072, 1, 1245149, 131072, 1, 1179613, 131072, 1, 1114077, 131072, 1, 1048541, 131072, 1, 983005, 131072, 1, 917469, 131072, 1, 851933, 131072, 1, 786397, 131072, 1, 720861, 131072, 1, 655325, 131072, 1, 589789, 131072, 1, -1048612, 131072, 1, -983076, 131072, 1, -917540, 131072, 1, -852004, 131072, 1, -786468, 131072, 1, -720932, 131072, 1, -655396, 131072, 1, -589860, 131072, 1, -524324, 131072, 1, -458788, 131072, 1, -393252, 131072, 1, -327716, 131072, 1, -262180, 131072, 1, -196644, 131072, 1, -131108, 131072, 1, -65572, 131072, 1, -36, 131072, 1, 65500, 131072, 1, 131036, 131072, 1, 196572, 131072, 1, 262108, 131072, 1, 327644, 131072, 1, 393180, 131072, 1, 458716, 131072, 1, 524252, 131072, 1, 589788, 131072, 1, 655324, 131072, 1, 720860, 131072, 1, 786396, 131072, 1, 851932, 131072, 1, 917468, 131072, 1, 983004, 131072, 1, 1048540, 131072, 1, 1114076, 131072, 1, 1179612, 131072, 1, 1245148, 131072, 1, -1048611, 131072, 1, -983075, 131072, 1, -917539, 131072, 1, -852003, 131072, 1, -786467, 131072, 1, -720931, 131072, 1, -655395, 131072, 1, -589859, 131072, 1, -524323, 131072, 1, -458787, 131072, 1, -393251, 131072, 1, -327715, 131072, 1, -262179, 131072, 1, -196643, 131072, 1, -131107, 131072, 1, -65571, 131072, 1, -35, 131072, 1, 65501, 131072, 1, 131037, 131072, 1, 196573, 131072, 1, 262109, 131072, 1, 327645, 131072, 1, 393181, 131072, 1, 458717, 131072, 1, 524253, 131072, 1, 1179663, 131072, 1, 1179664, 131072, 1, 1179665, 131072, 1, 1179666, 131072, 1, 1179667, 131072, 1, 1179668, 131072, 1, 1179669, 131072, 1, 1179670, 131072, 1, 1179671, 131072, 1, 1179672, 131072, 1, 1179673, 131072, 1, 1179674, 131072, 1, 1179675, 131072, 1, -1114084, 131072, 1, -1048548, 131072, 1, -983012, 131072, 1, -917476, 131072, 1, -1114083, 131072, 1, -1048547, 131072, 1, -983011, 131072, 1, -917475, 131072, 1, -851939, 131072, 1, -786403, 131072, 1, -720867, 131072, 1, -655331, 131072, 1, -589795, 131072, 1, -524259, 131072, 1, -458723, 131072, 1, -393187, 131072, 1, -327651, 131072, 1, -262115, 131072, 1, -196579, 131072, 1, -131043, 131072, 1, -65507, 131072, 1, 29, 131072, 1, 65565, 131072, 1, 131101, 131072, 1, 196637, 131072, 1, 262173, 131072, 1, 327709, 131072, 1, 393245, 131072, 1, 458781, 131072, 1, 524317, 131072, 1, 589853, 131072, 1, 655389, 131072, 1, 720925, 131072, 1, 786461, 131072, 1, 851997, 131072, 1, 917533, 131072, 1, 983069, 131072, 1, 1048605, 131072, 1, 1114141, 131072, 1, -1114082, 131072, 1, -1048546, 131072, 1, -983010, 131072, 1, -917474, 131072, 1, -851938, 131072, 1, -786402, 131072, 1, -720866, 131072, 1, -655330, 131072, 1, -589794, 131072, 1, -524258, 131072, 1, -458722, 131072, 1, -393186, 131072, 1, -327650, 131072, 1, -262114, 131072, 1, -196578, 131072, 1, -131042, 131072, 1, -65506, 131072, 1, 30, 131072, 1, 65566, 131072, 1, 131102, 131072, 1, 196638, 131072, 1, 262174, 131072, 1, 327710, 131072, 1, 393246, 131072, 1, 458782, 131072, 1, 524318, 131072, 1, 589854, 131072, 1, 655390, 131072, 1, 720926, 131072, 1, 786462, 131072, 1, 851998, 131072, 1, 917534, 131072, 1, 983070, 131072, 1, 1048606, 131072, 1, 1114142, 131072, 1, 1179676, 131072, 1, 1179677, 131072, 1, 1179678, 131072, 1, 917477, 0, 1, 917478, 0, 1, 917479, 0, 1, 917480, 0, 1, 917481, 0, 1, 917482, 0, 1, 917483, 0, 1, -393243, 0, 1, -327707, 0, 1, -262171, 0, 1, -262170, 0, 1, -262169, 0, 1, -262168, 0, 1, -262167, 0, 1, -262166, 0, 1, -262165, 0, 1, -262164, 0, 1, -327700, 0, 1, -393236, 0, 1)
layer_3/name = "Foreground"
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array()

[node name="Bullets" type="Node" parent="."]

[node name="Limits" type="Node" parent="."]

[node name="MarkerTL" type="Marker2D" parent="Limits"]
position = Vector2(-626, -300)

[node name="MarkerBR" type="Marker2D" parent="Limits"]
position = Vector2(526, 348)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-599, 313)
zoom = Vector2(1.5, 1.5)
limit_left = -626
limit_top = -300
limit_right = 526
limit_bottom = 348
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_right_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Player" parent="." instance=ExtResource("4_2auae")]
position = Vector2(-599, 313)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("5_dvb77")]
position = Vector2(-439, -114)

[node name="Enemy2" parent="Enemies" instance=ExtResource("5_dvb77")]
position = Vector2(-380, -113)

[node name="Door" parent="." instance=ExtResource("6_k2ayu")]
visible = false
position = Vector2(-321, -28)
destination = "World2"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_b7y41")
}

[node name="GUI" parent="." instance=ExtResource("9_y8c8s")]
visible = false

[node name="Terminal" parent="." instance=ExtResource("10_rr7bi")]
position = Vector2(-386, 308)
bridge_size = Vector2i(22, 2)
bridge_position = Vector2i(-180, 296)

[node name="Terminal2" parent="." instance=ExtResource("10_rr7bi")]
position = Vector2(-387, 220)
bridge_size = Vector2i(13, 3)
bridge_position = Vector2i(-180, 150)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-173, 264)

[node name="BridgeCams" type="Node" parent="."]

[node name="C1" type="Camera2D" parent="BridgeCams"]
position = Vector2(144, 141)
enabled = false
zoom = Vector2(1.5, 1.5)
limit_left = -626
limit_top = -300
limit_right = 526
limit_bottom = 348
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_right_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true
